@@ -5,6 +5,7 @@ Added support for MaxMind domain lookup (#8)
 Added support for MaxMind region lookup (#6)
 Added support for MaxMind organization lookup (#5)
 Made unit tests use test databases (#11)
+Parallelized lookups into various MaxMind databases (#15)
 Used MaxMindlibrary from Maven (#9)
 Clarified README (#2) (TODO)
 Added CHANGELOG (#4)
